## unreleased
* #60: Fix dirfd argument in unlinkat and newfd argument in renameat
  not being correctl propagated.
  (Antonin Décimo)
* #59: Update to ppxlib 0.36.0 and depend on OCaml >= 4.08.
  (Antonin Décimo)

## v0.4.3 - 4 Dec 2024
* Move macros accessing values outside of blocking sections
* Use caml_stat_* functions instead of malloc/free for heap data
* Support renameat2

## v0.4.2 - 10 Aug 2024
* Add TIOCGWINSZ ioctl
* Release runtime mutex in all functions in atfile.c
* Fix splice bindings
* Minor bug fixes

## v0.4.1 - 20 Jun 2022
* Support OCaml 5 new Unix primitive names

## v0.4.0 - 04 Fev 2022
* Remove top-level module names, modules should be accessed via
  ExtUnix top-level module.
* Import realpath from OCaml 4.13
* Support realpath on Windows

## v0.3.2 - 09 May 2021
* Emulate statvfs on Windows
* build: mark ppxlib as build-time dep, depend on OCaml >= 4.06

## v0.3.1 - 11 Apr 2021
* temporarily keep backward compatibility wrt top-level module names

## v0.3.0 - 10 Apr 2021
* build: switch to dune, dune-configurator and ppxlib
* sockopt: handle missing options at runtime
* Add IPv6 support to getifaddrs
* better Windows support
+ Support Endian module on Windows
+ Enable asctime, strftime, tzname, timezone, timegm on Windows

## v0.2.0 -  8 Nov 2019
* camlp4 dependency replaced with ppx
* use available endian functions on Mac OS

## v0.1.7 - 27 Mar 2019
* detect endian functions on more platforms
* fix openlog
* improve gettid on Mac OS

## v0.1.6 - 11 Mar 2018
* OCaml 4.05 compatibility (O_KEEPEXEC)
* sockopt: add BPF options
* make tests less fragile
* New bindings:
  * syslog

## v0.1.5 - 28 Jun 2017
* build with -safe-string

## v0.1.4 - 11 Nov 2016
+ SO_REUSEPORT
* fix sendmsg bug
* fix build on mingw

## v0.1.3 - 24 Nov 2015
* New bindings :
  * fchmodat
  * fchownat
+ ExtUnix.Config
* fix sysconf detection wrt non-standard options

## v0.1.2 - 24 Jul 2015
* New bindings :
  * sysinfo uptime
  * mtrace muntrace
  * mount umount2