@@ -70,4 +70,5 @@
    uname
    unistd
    unshare
+   wait4
    eventfd)))
