@@ -1,4 +1,6 @@
 ## unreleased
+* New bindings:
+  * #58: support wait4 (Filipe Marques)
 * #60: Fix dirfd argument in unlinkat and newfd argument in renameat
   not being correctl propagated.
   (Antonin Décimo)
